# celeb-resnet-classifier

./: .gitignore  README.md  predict.py  pyproject.toml  torchvision.pyi
celeb_classifier/: celeb.ipynb  dataset.py  model.py  playground.ipynb  train.ipynb  train.py
