[tool.poetry]
name = "celeb-classifier"
version = "0.1.0"
description = "celeb classifier using PyTorch"
authors = ["Felix"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0"
torch = "^2.5.1"
torchvision = "^0.20.1"
transformers = "^4.46.3"
datasets = "^3.1.0"
tensorboard = "^2.18.0"
tqdm = "^4.67.0"
types-tqdm = "^4.67.0.20241119"
ipykernel = "^6.29.5"
matplotlib = "^3.9.2"
accelerate = "0.26.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
